[sw] update from Pootle (firefox)

--- a/sw/browser/chrome/browser/browser.properties
+++ b/sw/browser/chrome/browser/browser.properties
@@ -365,9 +365,6 @@ webapps.install.success = Programu Imesakinishwa
 webapps.install.inprogress = Usakinishaji unaendelea
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S ni skrini nzima.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 
 service.toolbarbutton.label=Huduma
@@ -409,6 +406,9 @@ getUserMedia.shareMicrophone.message = Je, ungependa kushiriki mikrofoni yako na
 getUserMedia.shareCameraAndMicrophone.message = Ungependa kushiriki kamera na mikrofoni yako na %S?
 getUserMedia.noVideo.label = Hakuna Video
 getUserMedia.noAudio.label = Hakuna Sauti
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -506,3 +506,4 @@ appmenu.restartBrowserButton.label = Washa upya %S
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+
