--- a/sw/browser/chrome/browser/devtools/debugger.properties
+++ b/sw/browser/chrome/browser/devtools/debugger.properties
@@ -42,11 +42,14 @@ collapsePanes=Kunja vidirisha
 # that expands the left and right panes in the debugger UI.
 expandPanes=Panua vidirisha
 
-# LOCALIZATION NOTE (pauseLabel): The label that is displayed on the pause
+# LOCALIZATION NOTE (pauseButtonTooltip): The tooltip that is displayed for the pause
 # button when the debugger is in a running state.
 pauseButtonTooltip=Bofya ili kusitisha (%S)
 
-# LOCALIZATION NOTE (resumeLabel): The label that is displayed on the pause
+# LOCALIZATION NOTE (pausePendingButtonTooltip): The tooltip that is displayed for
+# the pause button after it's been clicked but before the next JavaScript to run.
+
+# LOCALIZATION NOTE (resumeButtonTooltip): The label that is displayed on the pause
 # button when the debugger is in a paused state.
 resumeButtonTooltip=Bofya ili kuendeleza (%S)
 
