--- a/sw/browser/chrome/browser/tabbrowser.properties
+++ b/sw/browser/chrome/browser/tabbrowser.properties
@@ -29,6 +29,8 @@ tabs.closeWarningTitle=Thibitisha kufunga
 tabs.closeButtonMultiple=Funga vichupo
 tabs.closeWarningPromptMe=Nionye nikijaribu kufunga vichupo vinavyozidi kimoja
 
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
