--- a/sw/services/sync/sync.properties
+++ b/sw/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %1$S's %2$S kwa %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Ulandanisho wa mwisho: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Vialamisho Jongevu
 
 remote.pending.label = Vichupo vya mbali vinalandanishwa…
