[tl] update from Pootle (firefox)

--- a/tl/browser/chrome/browser/browser.properties
+++ b/tl/browser/chrome/browser/browser.properties
@@ -319,9 +319,6 @@ tabviewButton.tooltip=Grupo ng iyong tabs (%S)
 webapps.requestInstall2 = Nais mo bang e-install yung '"%S" galing sa site?
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S ay sagad ng bukas.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Ipakita ang window sa buong screen (%S)
 
@@ -355,6 +352,9 @@ identity.newIdentity.email.placeholder = Email
 getUserMedia.shareCamera.message = Nais mo bang ibahagi ang iyong camera sa %S?
 getUserMedia.shareScreenAndMicrophone.message = Nais mo bang ibahagi ang microphone at screen sa %S?
 getUserMedia.noAudio.label = Walang Audio
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -453,3 +453,4 @@ appmenu.restartBrowserButton.label = Mag-restart %S
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+
