--- a/tl/browser/chrome/browser/tabbrowser.properties
+++ b/tl/browser/chrome/browser/tabbrowser.properties
@@ -26,6 +26,8 @@ tabs.closeWarningMultiple=Malapit na isara ang #1 tab. Ipagpatuloy ba ang pagsar
 tabs.closeButtonMultiple=Isara ang tabs
 tabs.closeWarningPromptMe=Pagsabihan ako kapag sinubukan kong magsara ng maraming tab
 
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
