--- a/tl/toolkit/chrome/global/printdialog.properties
+++ b/tl/toolkit/chrome/global/printdialog.properties
@@ -27,7 +27,7 @@ headerFooterURL=URL
 headerFooterDate=Petsa/Oras
 
 # These are for the summary view in the Mac dialog:
-summaryFramesTitle=I-Print ang mga Frame
+summaryFramesTitle=Print Frames
 summaryHeaderTitle=Mga Panimula ng Pahina
 summaryFooterTitle=Footers ng Pahina
 summaryNAValue=N/A
