--- a/tl/browser/chrome/browser/accounts.properties
+++ b/tl/browser/chrome/browser/accounts.properties
@@ -17,10 +17,13 @@ upgradeToFxA.accessKey = U
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 
 
 
 # These strings are used in a dialog we display after the user requests we resend
 # a verification email.
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
