--- a/tl/services/sync/sync.properties
+++ b/tl/services/sync/sync.properties
@@ -7,6 +7,9 @@
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Huling sync: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 
 remote.pending.label = Sinisync ang mga remote tab…
 remote.missing2.label = Sync your other devices again to access their tabs
