[uz] update from Pootle (firefox)

--- a/uz/browser/chrome/browser/accounts.properties
+++ b/uz/browser/chrome/browser/accounts.properties
@@ -26,6 +26,8 @@ resendVerificationEmail.accessKey = Q
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Unutish
 forgetMigration.accessKey = U
 
@@ -42,6 +44,7 @@ verificationSentTitle = Tasdiqlash jo‘natilgan
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Tasdiqlash lini %S ga jo‘natildi
 verificationSentDescription = E-pochtangizni tekshirib ko‘ring va sinxronlash uchun linkka bosing.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Tasdiqlash jo‘natilmadi
 verificationNotSentHeading = Biz ayni damda tasdiqlash xatini jo‘nata olmaymiz
