--- a/uz/browser/chrome/browser/devtools/markers.properties
+++ b/uz/browser/chrome/browser/devtools/markers.properties
@@ -20,7 +20,7 @@ marker.label.paint=Bo‘yash
 marker.label.javascript=Funksiya chaqiruvi
 marker.label.domevent=DOM hodisasi
 marker.label.consoleTime=Terminal
-marker.label.garbageCollection=Qo‘shimcha GC
+marker.label.garbageCollection.incremental=Qo‘shimcha GC
 marker.label.unknown=Noma’lum
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
