--- a/uz/services/sync/sync.properties
+++ b/uz/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %1$S'ning %2$S %3$Sda
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Soʻnggi sinx-ya: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Mobayl xatchoʻplari
 
 remote.pending.label = Masofadagi ichki oynalar sinx-ya qilindi...
