--- a/uz/browser/chrome/browser/loop/loop.properties
+++ b/uz/browser/chrome/browser/loop/loop.properties
@@ -25,10 +25,9 @@ sign_in_again_button=Kirish
 ## will be replaced by the super short brandname.
 sign_in_again_use_as_guest_button2={{clientSuperShortname}} xizmatidan "Mehmon" sifatida foydalaning
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Suhbatga qo‘shiling
 first_time_experience_button_label=Boshlash
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Biror kishini suhbatga taklif qiling.
 
@@ -82,25 +81,23 @@ settings_menu_button_tooltip=Sozlamalar
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Izlash…
+contacts_search_placesholder2=Izlash…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Yangi aloqa
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Nomi
-new_contact_email_placeholder=E-pochta
-new_contact_fxos_phone_placeholder=Firefox OS Phone
-new_contact_phone_placeholder2=Telefon
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Firefox OS Phone
+contact_form_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Bloklangan aloqalar
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Aloqa qo‘shish
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -124,10 +121,16 @@ import_contacts_success_message={{total}} ta aloqa muvaffaqiyatli ravishda impor
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Aloqalarni sinxronlash
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -171,7 +174,6 @@ edit_contact_email_label=E-pochta
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Tayyor
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -185,8 +187,6 @@ video_call_menu_button=Video suhbat
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Aloqalaringizga profil nishonchalarini ularning e-pochta manzillarini Gravatar orqali bo‘lishish orqali avtomatik tarzda qo‘shishingiz mumkin.
 gravatars_promo_message_learnmore=Ko‘proq o‘rganish
-gravatars_promo_button_nothanks=Yoʻq, rahmat
-gravatars_promo_button_use=Profil nishonchalaridan foydalanish
 
 # Conversation Window Strings
 
@@ -202,8 +202,6 @@ hangup_button_title=Suhbatni tugatish
 hangup_button_caption2=Chiqish
 mute_local_audio_button_title=Audioni o‘chirish
 unmute_local_audio_button_title=Audoni yoqish
-mute_local_video_button_title=Video ovozini o‘chirish
-unmute_local_video_button_title=Video ovozini yoqish
 active_screenshare_button_title=Bo‘lishishni to‘xtatish
 inactive_screenshare_button_title=Ekranni bo‘lishish
 share_tabs_button_title2=Ichki oynalarni bo‘lishish
@@ -240,7 +238,6 @@ restart_call=Qayta qo‘shilish
 contact_unavailable_title={{contactName}} mavjud emas.
 generic_contact_unavailable_title=Ushbu shaxs mavjud emas.
 
-generic_failure_title=Qandaydir xato ketdi.
 generic_failure_with_reason2=Siz yana urinib ko‘rishingiz yoki yetib borishi uchun keyinroq havolani e-pochta orqali jo‘natishingiz mumkin.
 generic_failure_no_reason2=Yana urinib ko‘rishni xohlaysizmi?
 
@@ -292,24 +289,17 @@ tour_label=Sayohat
 rooms_default_room_name_template={{conversationLabel}}-suhbat
 rooms_leave_button_label=Suhbatdan chiqish
 rooms_list_copy_url_tooltip=Havoladan nusxa olish
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Joriy suhbat;Joriy suhbatlar
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Suhbatni o‘chirish
 rooms_list_deleteConfirmation_label=Ishonchingiz komilmi?
-rooms_list_no_current_conversations=Hozirda hech kim suhbatlashmayapti
 rooms_change_failed_label=Suhbatni yangilab bo‘lmaydi
 rooms_new_room_button_label=Suhbatni boshlash
-rooms_only_occupant_label=Siz bu yerda birinchisiz.
 rooms_panel_title=Suhbatni tanlang yoki yangisini boshlang
 rooms_room_full_label=Ushbu suhbat xonasida ikki kishi bor.
 rooms_room_full_call_to_action_nonFx_label=Qo‘ng‘iroq qilish uchun {{brandShortname}} brauzerini yuklab oling
 rooms_room_full_call_to_action_label={{clientShortname}} xizmati haqida ko‘proq ma’lumot olish »
 rooms_room_joined_label=Kimdir suhbatga qo‘shildi!
-rooms_room_join_label=Suhbatga qo‘shilish
 rooms_signout_alert=Ochiq suhbatlar yopiladi
 
 # Infobar strings
@@ -322,12 +312,14 @@ infobar_menuitem_dontshowagain_accesskey=D
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
-context_inroom_label=Keling, suhbatlashamiz:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -335,12 +327,12 @@ context_edit_activate_label="{{title}}" haqida gaplashamiz
 context_edit_name_placeholder=Suhbat nomi
 context_edit_comments_placeholder=Mulohazalar
 context_add_some_label=Biroz matn qo‘shish
-context_edit_tooltip=Matnni tahrirlash
-context_hide_tooltip=Matnni yashirish
 context_show_tooltip=Matnni ko‘rsatish
-context_save_label2=Saqlash
 context_link_modified=Ushbu havola o‘zgartirildi.
 context_learn_more_link_label=Ko‘proq o‘rganing.
+conversation_settings_menu_edit_context=Matnni tahrirlash
+conversation_settings_menu_hide_context=Matnni yashirish
+
 
 # Text chat strings
 
