--- a/uz/browser/chrome/browser/tabbrowser.properties
+++ b/uz/browser/chrome/browser/tabbrowser.properties
@@ -30,6 +30,8 @@ tabs.closeWarningMultiple=#1 ta ichki oynani yopish arafasidasiz. Davom ettirish
 tabs.closeButtonMultiple=Ichki oynalarni yopish
 tabs.closeWarningPromptMe=Bir nechta ichki oynalarni yopayotganimda meni ogohlantir
 
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
