--- a/uz/dom/chrome/dom/dom.properties
+++ b/uz/dom/chrome/dom/dom.properties
@@ -155,7 +155,7 @@ ImportXULIntoContentWarning=XUL ulamlarni hujjat tarkibiga import qilish eskirga
 XMLDocumentLoadPrincipalMismatch=Hujjatlarda boshqa Windows’dan kelgan document.load’dan foydalanish ta’qiqlangan. Faqat "Hujjat" yaratgan oynaga "Hujjatda"  .load’ni chaqirishga ruxsat berilgan. O‘rniga XMLHttpRequest’dan foydalanish tavsiya qilinadi.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Haligacha tugallanmagan IndexedDB o‘kazmasi sahifa boshqaruv nazorati tufayli to‘xtatib qo‘yilgan.
-# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S are numbers.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 # LOCALIZATION NOTE: Do not translate "Worker".
@@ -164,4 +164,6 @@ IndexedDBTransactionAbortNavigation=Haligacha tugallanmagan IndexedDB o‘kazmas
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "FetchEvent.request.type", "same-origin", "cors", "no-cors", "opaque", "Response", or "RequestMode".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Error", "Response", "FetchEvent.respondWith()", or "fetch()".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", or "Response.clone()".
-# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
