[wo] update from Pootle (firefox)

--- a/wo/browser/chrome/browser/browser.properties
+++ b/wo/browser/chrome/browser/browser.properties
@@ -343,9 +343,6 @@ webapps.install.success = Jëfekaay bi sampu na
 webapps.uninstall = Simpi
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S mi ngi leegi ci yambalaŋ.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 
 
@@ -381,6 +378,9 @@ identity.loggedIn.description = Xaatim niki: %S
 getUserMedia.shareCamera.message = Ndax da nga bëgg seddoo sa webcam ak %S?
 getUserMedia.shareMicrophone.message = Ndax da nga bëgg bokk sa mikoro ak %S?
 getUserMedia.shareCameraAndMicrophone.message = Ndax da nga bëgg bokk sa Mikoro ak sa webcam ak %S ?
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -476,3 +476,4 @@ getUserMedia.shareCameraAndMicrophone.message = Ndax da nga bëgg bokk sa Mikoro
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+
