--- a/wo/browser/chrome/browser/tabbrowser.properties
+++ b/wo/browser/chrome/browser/tabbrowser.properties
@@ -30,6 +30,8 @@ tabs.closeButtonMultiple=Tëjal koñ yi
 tabs.closeWarningPromptMe=Ñu yëgal laata ñu tëj koñ yu bari
 
 tabs.closeTab.tooltip=Tëjal koñ bi
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
