--- a/wo/browser/chrome/browser/devtools/markers.properties
+++ b/wo/browser/chrome/browser/devtools/markers.properties
@@ -14,7 +14,7 @@
 # LOCALIZATION NOTE (marker.label.*):
 # These strings are displayed in the Performance Tool waterfall, identifying markers.
 # We want to use the same wording as Google Chrome when appropriate.
-marker.label.garbageCollection=Incremental GC
+marker.label.garbageCollection.incremental=Incremental GC
 marker.label.unknown=Xameesuko
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
