[ff] update from Pootle (mobile)

--- a/ff/mobile/android/chrome/aboutLogins.properties
+++ b/ff/mobile/android/chrome/aboutLogins.properties
@@ -8,8 +8,12 @@ loginsDialog.copy=Natto
 loginsDialog.confirm=OK
 loginsDialog.cancel=Haaytu
 
+
 loginsDetails.age=Duuɓi: balɗe %S
 
 loginsDetails.copyFailed=Nattol woorii
 loginsDetails.passwordCopied=Finnde nattaama
 loginsDetails.usernameCopied=Innde kuutoro nattaama
+
+password-btn.show=Hollu
+password-btn.hide=Suuɗ
