--- a/ff/mobile/android/chrome/browser.properties
+++ b/ff/mobile/android/chrome/browser.properties
@@ -307,12 +307,22 @@ masterPassword.incorrect=Finnde ndee moƴƴaani
 # LOCALIZATION NOTE (remoteIncomingPromptTitle): The title displayed on the
 # dialog that prompts the user to allow the incoming connection.
 remoteIncomingPromptTitle=Ceŋannde Naatoore
-# LOCALIZATION NOTE (remoteIncomingPromptMessage): The message displayed on the
-# dialog that prompts the user to allow the incoming connection.
-remoteIncomingPromptMessage=Ɗaɓɓitannde naatoore ngam yamirde seŋannde buggitgol woɗɗunde ejtaama. Kiliyaan goɗɗuɗo ena waawi ɓantude ɗowngol wanngoraade maa fof! Yamir seŋannde?
-remoteIncomingPromptDisable=Daaƴ
-remoteIncomingPromptAccept=OK
-remoteIncomingPromptCancel=Haaytu
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming USB connection.
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming TCP connection.
+# LOCALIZATION NOTE (remoteIncomingPromptDeny): This button will deny an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptAllow): This button will allow an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptScan): This button will start a QR
+# code scanner to authenticate an incoming remote debugger connection.  The
+# connection will be allowed assuming the scan succeeds.
+# LOCALIZATION NOTE (remoteIncomingPromptScanAndRemember): This button will
+# start a QR code scanner to authenticate an incoming remote debugger
+# connection.  The connection will be allowed assuming the scan succeeds, and
+# the other endpoint's certificate will be saved to skip future scans for this
+# client.
 
 # LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
 remoteNotificationTitle=Buggitagol %S hirminaama
@@ -370,7 +380,6 @@ getUserMedia.sharingCameraAndMicrophone.message2 = Kameraa e mikkoroo ena kuɓɓ
 
 #Open in App
 openInApp.pageAction = Uddit e Jaaɓnirgal
-openInApp.ok = OK
 openInApp.cancel = Haaytu
 
 #Tab sharing
