--- a/ks/mobile/android/chrome/browser.properties
+++ b/ks/mobile/android/chrome/browser.properties
@@ -5,9 +5,9 @@
 addonsConfirmInstall.title=انسٹالنگ اڑآن
 addonsConfirmInstall.install=انسٹال
 
+
 # Alerts
 alertAddonsDownloading=ڈاونلوڈنگ اہڈ آن
-alertAddonsFail=انسٹال گو ناکام
 alertAddonsInstalledNoRestart.message=انسٹال گو پورء
 
 # LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
@@ -39,14 +39,18 @@ alertSearchEngineDuplicateToast='%S'چھ گوڈء چھون اک سرچ انجن
 downloadCancelPromptTitle=منسوخ ڈونلوڈ
 downloadCancelPromptMessage=توہ چھوا یژان ڈونلوڈ منسوخ کارون
 
-# LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
+
+# LOCALIZATION NOTE (unsignedAddonsDisabled.title, unsignedAddonsDisabled.message):
+# These strings will appear in a dialog when Firefox detects that installed add-ons cannot be verified.
+
+# LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4, addonError-5):
 # #1 is the add-on name, #2 is the add-on host, #3 is the application name
 addonError-1=#2وس پٹھ کنکشن ناکام گسنہ ستھ ایڈ-آن گونہ ڈاونلوڈ۔
 addonError-2=#2 پہٹھ اہڈ آن حکنہ انسٹال گاستھ ہلکہ  یچھنہ 3# ایڈ آنس ستھ لران کیں
 addonError-3=\u0020#2 پہٹھ اہڈ آن ڈاونلوڈیڈ حکنہ انسٹتال گاستھ یلکہ یچھو باسان خراب
 addonError-4=#1 ھکنہ انسٹال گستھ کہژکہ   3# کرنہ ظرورت فہلہ ترمہم
 
-# LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonErrorIncompatible, addonErrorBlocklisted):
+# LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonLocalError-5, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #3 is the application name, #4 is the application version
 addonLocalError-1=فایل سِسٹمس منز کھرئبی آسنہ کہ وجہ ستھ  یہ اہڈ-آن ھِیوکنہ انسٹال جستھ۔
 addonLocalError-2=#2 پہٹھ اہڈ آن حہکنہ انسٹال گاستھ ہلکہ  یچھنہ 3# ایڈ آنس ستھ لران کیں
@@ -191,9 +195,22 @@ contextmenu.addToReadingList=تراویو پرنِکس پرچس منز
 # Debugger
 # LOCALIZATION NOTE (remoteIncomingPromptTitle): The title displayed on the
 # dialog that prompts the user to allow the incoming connection.
-# LOCALIZATION NOTE (remoteIncomingPromptMessage): The message displayed on the
-# dialog that prompts the user to allow the incoming connection.
-remoteIncomingPromptDisable=بند کریو
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming USB connection.
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming TCP connection.
+# LOCALIZATION NOTE (remoteIncomingPromptDeny): This button will deny an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptAllow): This button will allow an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptScan): This button will start a QR
+# code scanner to authenticate an incoming remote debugger connection.  The
+# connection will be allowed assuming the scan succeeds.
+# LOCALIZATION NOTE (remoteIncomingPromptScanAndRemember): This button will
+# start a QR code scanner to authenticate an incoming remote debugger
+# connection.  The connection will be allowed assuming the scan succeeds, and
+# the other endpoint's certificate will be saved to skip future scans for this
+# client.
 
 # LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
 # LOCALIZATION NOTE (remoteNotificationGenericName): a generic name to use
@@ -217,7 +234,6 @@ helperapps.never=زءہنء
 # Tip shown to users the first time we hide the reader mode toolbar.
 
 #Open in App
-openInApp.ok = ہ کہ
 openInApp.cancel = منسوہ
 
 #Tab sharing
