--- a/lg/mobile/android/chrome/browser.properties
+++ b/lg/mobile/android/chrome/browser.properties
@@ -231,10 +231,22 @@ masterPassword.incorrect=Akasumuluzo akakyamu
 # LOCALIZATION NOTE (remoteIncomingPromptTitle): The title displayed on the
 # dialog that prompts the user to allow the incoming connection.
 remoteIncomingPromptTitle=Okuyunga Okuyingira
-# LOCALIZATION NOTE (remoteIncomingPromptMessage): The message displayed on the
-# dialog that prompts the user to allow the incoming connection.
-remoteIncomingPromptMessage=Okusaaba okuyingira okukiriza obuyambi okuva ebweru kuzulidwa. kompyuta enyambi esoboola okwefugiza enonyeso yo! Kiriza okuyunga?
-remoteIncomingPromptDisable=Jjako
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming USB connection.
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming TCP connection.
+# LOCALIZATION NOTE (remoteIncomingPromptDeny): This button will deny an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptAllow): This button will allow an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptScan): This button will start a QR
+# code scanner to authenticate an incoming remote debugger connection.  The
+# connection will be allowed assuming the scan succeeds.
+# LOCALIZATION NOTE (remoteIncomingPromptScanAndRemember): This button will
+# start a QR code scanner to authenticate an incoming remote debugger
+# connection.  The connection will be allowed assuming the scan succeeds, and
+# the other endpoint's certificate will be saved to skip future scans for this
+# client.
 
 # LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
 # LOCALIZATION NOTE (remoteNotificationGenericName): a generic name to use
