[tl] update from Pootle (mobile)

--- a/tl/mobile/android/chrome/browser.properties
+++ b/tl/mobile/android/chrome/browser.properties
@@ -3,8 +3,14 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 
+
 # Alerts
 
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
 
 
 # LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
@@ -12,11 +18,15 @@
 # that has been added; for example, 'Google'.
 
 
-# LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
+
+# LOCALIZATION NOTE (unsignedAddonsDisabled.title, unsignedAddonsDisabled.message):
+# These strings will appear in a dialog when Firefox detects that installed add-ons cannot be verified.
+
+# LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4, addonError-5):
 # #1 is the add-on name, #2 is the add-on host, #3 is the application name
 addonError-4=Hindi ma-install ang #1 sa kadahilanang hindi ma-modify ng #3 ang kinakailangang file.
 
-# LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonErrorIncompatible, addonErrorBlocklisted):
+# LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonLocalError-5, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #3 is the application name, #4 is the application version
 addonLocalError-4=Hindi ma-install ang #1 sa kadahilanang hindi ma-modify ng #3 ang kinakailangang file.
 addonErrorIncompatible=Hindi ma-install ang #1 sa kadahilanang hindi ito compatible sa #3 #4.
@@ -58,6 +68,19 @@ geolocation.shareLocation=Ibahagi ang lokasyon
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 
+# Device Storage API
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -82,8 +105,6 @@ offlineApps.allow=Payagan
 # LOCALIZATION NOTE (offlineApps.storeOfflineData): Label that will be used in
 # site settings dialog.
 
-# IndexedDB Quota increases
-
 # LOCALIZATION NOTE (password.savePassword): Label that will be used in
  # site settings dialog.
 # LOCALIZATION NOTE (password.save): This should match
@@ -101,13 +122,16 @@ offlineApps.allow=Payagan
 # Text Selection
 
 # Casting
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
 
 # Context menu
 contextmenu.fullScreen=Buong Screen
 # LOCALIZATION NOTE (contextmenu.search):
 # The label of the contextmenu item which allows you to search with your default search engine for
 # the text you have selected. %S is the name of the search engine. For example, "Google".
-contextmenu.addSearchEngine=Idagdag ang Search Engine
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
 
 
 
@@ -121,11 +145,6 @@ contextmenu.addSearchEngine=Idagdag ang Search Engine
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$Sms
-
-# Webapps
-# Shown when there is a generic problem installing an app
-# Shown when there is something wrong with an apps manifest
-# Shown when a network error prevented installing an app
 
 # Click to play plugins
 # LOCALIZATION NOTE (clickToPlayPlugins.dontAskAgain): This label appears next to a
@@ -143,15 +162,30 @@ timer.end=%1$S: %2$Sms
 # LOCALIZATION NOTE (remoteIncomingPromptTitle): The title displayed on the
 # dialog that prompts the user to allow the incoming connection.
 remoteIncomingPromptTitle=papasok na koneksyon
-# LOCALIZATION NOTE (remoteIncomingPromptMessage): The message displayed on the
-# dialog that prompts the user to allow the incoming connection.
-remoteIncomingPromptMessage=Isang papasok na kahilingan sa pinahihintulutan ng remote na koneksyon ng pagde-debug ay nakita. Ang isang remote client ay maaaring umabot ng kumpletong kontrol sa iyong browser! Payagan ang mga koneksyon?
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming USB connection.
+# LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
+# dialog that prompts the user to allow an incoming TCP connection.
+# LOCALIZATION NOTE (remoteIncomingPromptDeny): This button will deny an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptAllow): This button will allow an
+# an incoming remote debugger connection.
+# LOCALIZATION NOTE (remoteIncomingPromptScan): This button will start a QR
+# code scanner to authenticate an incoming remote debugger connection.  The
+# connection will be allowed assuming the scan succeeds.
+# LOCALIZATION NOTE (remoteIncomingPromptScanAndRemember): This button will
+# start a QR code scanner to authenticate an incoming remote debugger
+# connection.  The connection will be allowed assuming the scan succeeds, and
+# the other endpoint's certificate will be saved to skip future scans for this
+# client.
 
 # LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
 # LOCALIZATION NOTE (remoteNotificationGenericName): a generic name to use
 # if the name of the app is not available.
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Buksan
@@ -163,7 +197,8 @@ helperapps.open=Buksan
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message, getUserMedia.sharingCamera.message, getUserMedia.sharingMicrophone.message, getUserMedia.sharingCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = Nais mo bang ibahagi ang iyong camera sa %S?
 
-#Reader mode
+# LOCALIZATION NOTE (readerMode.toolbarTip):
+# Tip shown to users the first time we hide the reader mode toolbar.
 
 #Open in App
 
@@ -171,3 +206,8 @@ getUserMedia.shareCamera.message = Nais mo bang ibahagi ang iyong camera sa %S?
 #Tabs in context menus
 
 # "Subscribe to page" prompts created in FeedHandler.js
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
