--- a/tl/mobile/overrides/passwordmgr.properties
+++ b/tl/mobile/overrides/passwordmgr.properties
@@ -2,10 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# 1st string is the username for the login, 2nd is the login's hostname.
-# Note that long usernames may be truncated.
-savePassword=i-save ang password para sa "%1$S" na nasa %2$S?
-# String is the login's hostname
+# String will be replaced by brandShortName.
 
 # String is the login's hostname
 updateButton=Pagsasangayon
