[dsb] update from Pootle (thunderbird)

--- a/dsb/editor/ui/chrome/composer/editor.properties
+++ b/dsb/editor/ui/chrome/composer/editor.properties
@@ -88,6 +88,7 @@ LinkText=Wótkazowy tekst
 LinkImage=Wótkazowy wobraz
 MixedSelection=[Měšany wuběrk]
 Mixed=(měšany)
+# LOCALIZATION NOTE (NotInstalled): %S is the name of the font
 EnterLinkText=Zapódajśo tekst, kótaryž ma se za wótkaz zwobraznił:
 EnterLinkTextAccessKey=Z
 EmptyLinkTextError=Zapódajśo pšosym tekst za toś ten wótkaz.
