[hsb] update from Pootle (thunderbird)

--- a/hsb/editor/ui/chrome/composer/editor.properties
+++ b/hsb/editor/ui/chrome/composer/editor.properties
@@ -88,6 +88,7 @@ LinkText=Tekst wotkaza
 LinkImage=Wobraz teksta
 MixedSelection=[Měšany wuběr]
 Mixed=(měšany)
+# LOCALIZATION NOTE (NotInstalled): %S is the name of the font
 EnterLinkText=Zapodajće tekst za zwobraznjenje wotkaza:
 EnterLinkTextAccessKey=Z
 EmptyLinkTextError=Dyrbiće tekst za tutón wotkaz podać.
