--- a/uz/editor/ui/chrome/composer/editor.properties
+++ b/uz/editor/ui/chrome/composer/editor.properties
@@ -18,6 +18,7 @@ No=Yo‘q
 ## LOCALIZATION NOTE (PublishProgressCaption, PublishToSite, AbandonChanges): Don't translate %title%
 ## LOCALIZATION NOTE: "Continue" in this sentence must match the text for
 ## the CancelPublishContinue key below
+# LOCALIZATION NOTE (NotInstalled): %S is the name of the font
 #LOCALIZATION NOTE (ValidateNumber):Don't translate: %n% %min% %max%
 #LOCALIZATION NOTE (DuplicateAnchorNameError): Don't translate %name%
 #LOCALIZATION NOTE (untitledTitle): %S is the window #.  No plural handling needed.
