[tl] update from Pootle (firefox)

--- a/tl/browser/chrome/overrides/appstrings.properties
+++ b/tl/browser/chrome/overrides/appstrings.properties
@@ -4,6 +4,7 @@
 
 fileNotFound=Hindi makita ng Firefox ang file sa %S.
 dnsNotFound=Hindi makita ng Firefox ang server sa %S.
+unknownProtocolFound=Ang Firefox ay hindi alam kung paano buksan ang address na ito, dahil isa sa sumusunod na mga protocol (%S) ay hindi nauugnay sa anumang programa o hindi pinapayagan sa ganitong konteksto.
 connectionFailure=Hindi maka-connect ang Firefox sa server sa %S.
 netInterrupt=Naabala ang koneksiyon sa %S habang ikinakarga ang pahina.
 redirectLoop=Napansin ng Firefox na idenederekta ng server ang lokasyon na ito sa paraang di makukumpleto.
