--- a/tl/browser/chrome/browser/newTab.properties
+++ b/tl/browser/chrome/browser/newTab.properties
@@ -30,3 +30,4 @@ newtab.block=Tanggalin ang site na ito
 # LOCALIZATION NOTE(newtab.intro1.paragraph2): %1$S will be replaced inline by
 # an active link using string newtab.privacy.link as text. %2$S will be replaced
 # inline by the gear icon used to customize the new tab window.
+newtab.intro.gotit=Nakuha ko
