[hsb] update from Pootle (firefox)

--- a/hsb/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/hsb/toolkit/chrome/global/devtools/gclicommands.properties
@@ -99,10 +99,12 @@ screenshotDelayManual=Čas, kotryž so čaka (w sekundach), prjedy hač so wobra
 # LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
 # the 'dpi' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
+screenshotDPIDesc=Dypki na cól
 
 # LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
 # 'dpi' parameter to the 'screenshot' command, displayed when the user
 # asks for help on what it does.
+screenshotDPIManual=Ličba dypkow na cól w foće wobrazowki
 
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
@@ -1582,6 +1584,7 @@ folderInvalidPath=Prošu zapodajće płaćiwu šćežku
 folderOpenDirResult=%1$S wočinjeny
 
 # LOCALIZATION NOTE (security)
+securityPrivacyDesc=Podpěrane funkcije wěstoty a priwatnosće pokazać
 securityManual=Přikazy za listowanje a wotwołowanje namjetow wo wěstotnych funkcijach za aktualnu domenu.
 securityListDesc=Wěstotne funkcije zwobraznić
 securityListManual=Lisćinu wšěch relewantnych wěstotnych funkcijow aktualneje strony zwobraznić.
