--- a/hsb/services/sync/sync.properties
+++ b/hsb/services/sync/sync.properties
@@ -10,6 +10,7 @@ lastSync2.label = Poslednja synchronizacija: %S
 
 # signInToSync.description is the tooltip for the Sync buttons when Sync is
 # not configured.
+signInToSync.description = Pola Sync přizjewić
 
 mobile.label = Mobilne zapołožki
 
