--- a/hsb/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/hsb/toolkit/chrome/global/devtools/styleinspector.properties
@@ -67,6 +67,7 @@ rule.warning.title=Njepłaćiwa kajkostna hódnota
 # LOCALIZATION NOTE (rule.filterProperty.title): Text displayed in the tooltip
 # of the search button that is shown next to a property that has been overridden
 # in the rule view.
+rule.filterProperty.title=Filtrowe prawidła, kotrež tutu kajkosć wobsahuja
 
 # LOCALIZATION NOTE (ruleView.empty): Text displayed when the highlighter is
 # first opened and there's no node selected in the rule view.
