--- a/hsb/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/hsb/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -56,6 +56,8 @@ removeAllPasswordsPrompt=Ccheće woprawdźe wšě hesła wotstronić?
 removeAllPasswordsTitle=Wšě hesła wotstronić
 removeLoginPrompt=Chceće woprawdźe tue přizjewjenje wotstronić?
 removeLoginTitle=Přizjewjenje wotstronić
+loginsDescriptionAll=Přizjewjenja za slědowace sydła so na wašim ličaku składuja:
+loginsDescriptionFiltered=Slědowace přizjewjenja wotpowěduja wašemu pytanju:
 # LOCALIZATION NOTE (loginHostAge):
 # This is used to show the context menu login items with their age.
 # 1st string is the username for the login, 2nd is the login's age.
