[br] update from Pootle (thunderbird)

--- a/br/editor/ui/chrome/composer/editor.properties
+++ b/br/editor/ui/chrome/composer/editor.properties
@@ -89,6 +89,7 @@ LinkImage=Eren ar skeudenn
 MixedSelection=[Diuzad kemmesket]
 Mixed=(kemmesket)
 # LOCALIZATION NOTE (NotInstalled): %S is the name of the font
+NotInstalled=%S (n'eo ket staliet)
 EnterLinkText=Enankañ an destenn da skrammañ evit an ere :
 EnterLinkTextAccessKey=T
 EmptyLinkTextError=Mar plin, enankit un destenn evit an ere-mañ.
