[hsb] update from Pootle (firefox)

--- a/hsb/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/hsb/toolkit/chrome/global/devtools/gclicommands.properties
@@ -1598,7 +1598,12 @@ securityCSPNoCSPOnPage=Content-Security-Policy njeda so namakać za
 securityCSPHeaderOnPage=Content-Security-Policy za
 securityCSPROHeaderOnPage=Hłowowa linka Content-Security-Polciy-Report-Only za
 # Referrer Policy specific
+securityReferrerPolicyDesc=Aktualne prawidła referrer
+securityReferrerPolicyManual=Prawidła referrer za aktualnu stronu z přikładowymi referrerami za rozdźělne URI pokazać.
+securityReferrerNextURI=Při wopytowanju
+securityReferrerCalculatedReferrer=Referrer budźe
 # LOCALIZATION NOTE: %1$S is the current page URI
+securityReferrerPolicyReportHeader=Prawidła referrer za %1$S
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
