--- a/hsb/dom/chrome/dom/dom.properties
+++ b/hsb/dom/chrome/dom/dom.properties
@@ -156,6 +156,7 @@ XMLDocumentLoadPrincipalMismatch=Wužiwanje document.load je na dokumentach zaka
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=IndexedDB-transakcija, kotraž hišće njeje so zakónčiła, je so nawigacije strony dla přetorhnyła.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S are numbers.
+IgnoringWillChangeOverBudgetWarning=Přetrjeba składowaka Will-change je přewysoka. Limit je powjerch dokumenta multiplikowany z %1$S (%2$S pikselow). Wšě wustupowanja will-change w dokumenće so ignoruja, jeli su nad limitom.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=ServiceWorker njeda so hnydom startować, dokelž druhe dokumenty samsneho pochada hižo maksimalnu ličbu workerow wužiwaja. ServiceWorker je nětko w čakanskim rynku a budźe so startować, po tym zo druhe workery su so skónčili.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
@@ -175,4 +176,6 @@ InterceptedUsedResponse=ServiceWorker je wužitu wotmołwu do FetchEvent.respond
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
 ClientRequestOpaqueInterception=ServiceWorker je opaknu wotmołwu na FetchEvent.respondWith() přepodał, mjeztym zo FetchEvent.request běše klientowe naprašowanje. Klientowe naprašowanje je generelnje wobhladowakowa nawigacija abo workerowy skript na najwyšej runinje.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
+BadOpaqueRedirectInterception=ServiceWorker přepoda opaqueredirect responsce do FetchEvent.respondWith(), mjeztym FetchEvent.request nawigaciske naprašowanje njeje.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
+InterceptionCanceled=ServiceWorker je wotpopadnjenje syće přez wołanje FetchEvent.preventDefault() přetorhnył.
