[tl] update from Pootle (firefox)

--- a/tl/dom/chrome/appstrings.properties
+++ b/tl/dom/chrome/appstrings.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+malformedURI=Ang URL ay hindi wasto at hindi maaaring mai-load.
 fileNotFound=Hindi mahanap ang file na %S. Pakisuri ng lokasyon at subukan muli.
 connectionFailure=Tinanggihan ang koneksyon noong sinubukan i-kontak ang %S.
 netInterrupt=Naputol bigla ang koneksyo sa %S. Maaring may iilang data na nalipat.
@@ -20,4 +21,5 @@ externalProtocolPrompt=Kailangan itakbo ang iba pang application upang tugunan a
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<Hindi Alam>
 phishingBlocked=The web site at %S has been reported as a web forgery designed to trick users into sharing personal or financial information.
+corruptedContentError=Hindi maipapakita ang pahina na iyong sinusubukan na tingnan dahil may nakitang error sa paghahatid ng data.
 remoteXUL=Ang pahina na ito ay gumagamit ng teknolohiyang hindi suportado.
