--- a/tl/toolkit/chrome/global/findbar.properties
+++ b/tl/toolkit/chrome/global/findbar.properties
@@ -3,6 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # strings used by the Find bar, split from browser.properties
+NotFound=Hindi makikita ang kasabihan
 WrappedToTop=Dulo na ng pahina, pagpapatuloy mula sa itaas
 WrappedToBottom=Naabot ang taas ng pahina, ipinagpatuloy mula sa baba
 # LOCALIZATION NOTE (FoundMatches): Semicolon-separated list of plural forms.
