[tl] update from Pootle (firefox)

--- a/tl/dom/chrome/layout/HtmlForm.properties
+++ b/tl/dom/chrome/layout/HtmlForm.properties
@@ -9,7 +9,9 @@ FileUpload=Upload ng File
 # should be a space (U+0020) in most locales. The prompt is followed by an 
 # input field. The space needs be escaped in the property file to avoid 
 # trimming.
+ForgotPostWarning=Form naglalaman enctype =%S, ngunit hindi naglalaman ng method = post. Ang pagpadala nang normal sa method = GET at walang enctype.
 # LOCALIZATION NOTE (DefaultFormSubject): %S will be replaced with brandShortName
+DefaultFormSubject=Form Post Mula sa %S
 # LOCALIZATION NOTE (NoFileSelected): this string is shown on a
 # <input type='file'> when there is no file selected yet.
 # LOCALIZATION NOTE (NoFilesSelected): this string is shown on a
