--- a/tl/toolkit/chrome/global/findbar.properties
+++ b/tl/toolkit/chrome/global/findbar.properties
@@ -9,6 +9,7 @@ WrappedToBottom=Naabot ang taas ng pahina, ipinagpatuloy mula sa baba
 # LOCALIZATION NOTE (FoundMatches): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is currently selected match and #2 the total amount of matches.
+FoundMatches=#1 of #2 match;#1 of #2 matches
 # LOCALIZATION NOTE (FoundMatchesCountLimit): Semicolon-separated list of plural
 # forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
