[tl] update from Pootle (firefox)

--- a/tl/netwerk/necko.properties
+++ b/tl/netwerk/necko.properties
@@ -8,7 +8,7 @@
 #SendingRequestTo=Sending request to 
 #TransferringDataFrom=Transferring data from 
 
-3=Hinahalughog ang %1$S
+3=Hinahanap ang %1$S...
 4=Connected sa %1$S…
 5=Nagpapadala ng hiling sa %1$S…
 6=Naglilipat ng data mula sa %1$S…
