--- a/br/mobile/android/chrome/aboutAccounts.properties
+++ b/br/mobile/android/chrome/aboutAccounts.properties
@@ -4,7 +4,13 @@
 
 # LOCALIZATION NOTE (relinkDenied.message): Ideally, this string is short (it's
 # a toast message).
+relinkDenied.message = Kennasket oc'h da Sync endeo !
 # LOCALIZATION NOTE (relinkDenied.openPrefs): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
+relinkDenied.openPrefs = GWELL
 
+relinkVerify.title = Ha sur oc'h e fell deoc'h kennaskañ ouzh Sync ?
 # LOCALIZATION NOTE (relinkVerify.message): Email address of a user previously signed in to Sync.
+relinkVerify.message = Kennasket e oac'h ouzh Sync gant ur chomlec'h postel disheñvel. Kennaskañ a touezio sinedoù, gerioù-tremen, hag arventennoù all ar merdeer-mañ gant %S
+relinkVerify.continue = Kenderc'hel
+relinkVerify.cancel = Nullañ
