--- a/hsb/browser/chrome/browser/browser.properties
+++ b/hsb/browser/chrome/browser/browser.properties
@@ -574,6 +574,7 @@ getUserMedia.shareEntireScreen.label = Cyła wobrazowka
 # LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
 # %S is screen number (digits 1, 2, etc)
 # Example: Screen 1, Screen 2,..
+getUserMedia.shareMonitor.label = Wobrazowka %S
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -584,7 +585,7 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 wokno);#1 (#2 woknje);#1 (
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareSelectedDevices.label = Wubrany grat &dźělić;Wubranej grataj &dźělić;Wubrane graty &dźělić;Wubrane graty dźělić
+getUserMedia.shareSelectedDevices.label = Wubrany grat &dźělić;Wubranej grataj dźělić
 getUserMedia.shareSelectedDevices.accesskey = d
 getUserMedia.shareScreen.label = Wobrazowku dźělić
 getUserMedia.shareApplication.label = Wubrane nałoženje dźělić
@@ -775,3 +776,7 @@ e10s.accessibilityNotice.disableAndRestart.accesskey = Z
 e10s.accessibilityNotice.dontDisable.label = Njeznjemóžnić
 e10s.accessibilityNotice.dontDisable.accesskey = N
 
+muteTab.label = Rajtark zněmić
+muteTab.accesskey = n
+unmuteTab.label = Zněmjenje rajtarka anulować
+unmuteTab.accesskey = m
