--- a/hsb/browser/chrome/browser/accounts.properties
+++ b/hsb/browser/chrome/browser/accounts.properties
@@ -28,6 +28,7 @@ resendVerificationEmail.accessKey = Z
 reconnectDescription = Z %S znowa zwjazać
 
 # LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+verifyDescription = %S wobkrućić
 
 forgetMigration.label = Zabyć
 forgetMigration.accessKey = b
@@ -46,7 +47,9 @@ verificationSentTitle = Přepruwowanje wotpósłane
 verificationSentHeading = Přepruwowanski wotkaz je so do %S pósłał
 verificationSentDescription = Prošu skontrolujće swoju e-mejl a klikńće na wotkaz, zo byšće ze synchronizowanjom započał.
 # LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
+verificationSentFull = Wobkrućenski wotkaz je so na %S pósłał. Prošu přepruwujće swoju e-mejlowu adresu a klikńće na wotkaz, zo byšće započał synchronizować.
 
 verificationNotSentTitle = Wobkrućenje njeda so pósłać
 verificationNotSentHeading = Njemóžemy tuchwilu žanu wobkrućensku e-mejlku pósłać
 verificationNotSentDescription = Prošu spytajće pozdźišo hišće raz.
+verificationNotSentFull = Njemóžemy tuchwilu wobkrućensku e-mejlku słać, prošu spytajće pozdźišo hišće raz.
