[hsb] update from Pootle (firefox)

--- a/hsb/browser/chrome/browser/devtools/app-manager.properties
+++ b/hsb/browser/chrome/browser/devtools/app-manager.properties
@@ -18,6 +18,7 @@ project.installing=Instaluje so…
 project.installed=Instalowany!
 validator.nonExistingFolder=Projektowy rjadowak njeeksistuje
 validator.expectProjectFolder=Projektowy rjadowak je dataja
+validator.noManifestFile=Manifestowa dataja je w korjenjowym rjadowaku projekta trěbna, z mjenom 'manifest.webapp ' za zapakowane nałoženja abo 'manifest.json' za přidatki.
 validator.invalidManifestURL=Njepłaćiwy manifestowy URL '%S'
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
