--- a/hsb/browser/chrome/browser/devtools/markers.properties
+++ b/hsb/browser/chrome/browser/devtools/markers.properties
@@ -17,11 +17,14 @@
 marker.label.styles=Stil znowa wobličeć
 marker.label.reflow=Layout
 marker.label.paint=Molować
+marker.label.composite=Zestajene woršty
+marker.label.compositeForwardTransaction=Zestajene naprašowanje pósłane
 marker.label.javascript=Funkciske wołanje
 marker.label.parseHTML=HTML analyzować
 marker.label.parseXML=XML analyzować
 marker.label.domevent=DOM-podawk
 marker.label.consoleTime=Konsola
+marker.label.garbageCollection2=Garbage collection
 marker.label.garbageCollection.incremental=Inkrementelny GC
 marker.label.garbageCollection.nonIncremental=Njeinkrementelny GC
 marker.label.cycleCollection=Zběrku přeběžeć
