--- a/tl/browser/chrome/browser/browser.properties
+++ b/tl/browser/chrome/browser/browser.properties
@@ -127,6 +127,8 @@ pluginInfo.unknownPlugin=Hindi Alam
 # infobar UI
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
+pluginActivateTrigger.label=Payagan
+pluginActivateTrigger.accesskey=P
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
@@ -249,6 +251,7 @@ geolocation.shareLocation.accesskey=a
 geolocation.shareWithSite2=Nais mo bang ibahagi ang lokasyon mo sa site na ito?\u0020
 geolocation.shareWithFile2=Nais mo bang ibahagi ang iyong lokasyon sa file na eto?
 
+webNotifications.showFromSite2=Gusto mo bang magpakita ng mga notification mula sa site na ito
 
 # Push Notifications
 
@@ -364,6 +367,8 @@ getUserMedia.noAudio.label = Walang Audio
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
+getUserMedia.denyRequest.label = Huwag Ibahagi
+getUserMedia.denyRequest.accesskey = H
 
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
