--- a/tl/browser/chrome/browser/tabbrowser.properties
+++ b/tl/browser/chrome/browser/tabbrowser.properties
@@ -32,3 +32,4 @@ tabs.closeWarningPromptMe=Pagsabihan ako kapag sinubukan kong magsara ng maramin
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
 # %S is the keyboard shortcut for "Unmute tab"
+tabs.muteAudio.background.tooltip=Itahimik ang tab\u0020
