[hsb] update from Pootle (mobile)

--- a/hsb/mobile/android/chrome/aboutAccounts.properties
+++ b/hsb/mobile/android/chrome/aboutAccounts.properties
@@ -4,7 +4,13 @@
 
 # LOCALIZATION NOTE (relinkDenied.message): Ideally, this string is short (it's
 # a toast message).
+relinkDenied.message = Sće hižo pola Sync přizjewjeny!
 # LOCALIZATION NOTE (relinkDenied.openPrefs): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
+relinkDenied.openPrefs = NAST
 
+relinkVerify.title = Chceće so woprawdźe w Sync registrować?
 # LOCALIZATION NOTE (relinkVerify.message): Email address of a user previously signed in to Sync.
+relinkVerify.message = Sće so prjedy pola Sync z druhej e-mejlowej adresu přizjewił. Přizjewjenje zapołožki, hesła a druhe nastajenja wobhladowaka z %S zjednoći
+relinkVerify.continue = Dale
+relinkVerify.cancel = Přetorhnyć
