[tl] update from Pootle (firefox)

--- a/tl/browser/chrome/browser/browser.properties
+++ b/tl/browser/chrome/browser/browser.properties
@@ -354,6 +354,7 @@ identity.newIdentity.email.placeholder = Email
 #  %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = Nais mo bang ibahagi ang iyong camera sa %S?
 getUserMedia.shareScreenAndMicrophone.message = Nais mo bang ibahagi ang microphone at screen sa %S?
+getUserMedia.noScreen.label = Walang Screen
 getUserMedia.noAudio.label = Walang Audio
 # LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
 # %S is screen number (digits 1, 2, etc)
@@ -369,6 +370,8 @@ getUserMedia.noAudio.label = Walang Audio
 # The number of devices can be either one or two.
 getUserMedia.denyRequest.label = Huwag Ibahagi
 getUserMedia.denyRequest.accesskey = H
+getUserMedia.continueSharing.label = Magpatuloy sa pagbabahagi
+getUserMedia.continueSharing.accesskey = M
 
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
