--- a/az/mobile/android/chrome/aboutAccounts.properties
+++ b/az/mobile/android/chrome/aboutAccounts.properties
@@ -4,7 +4,12 @@
 
 # LOCALIZATION NOTE (relinkDenied.message): Ideally, this string is short (it's
 # a toast message).
+relinkDenied.message = Artıq Sync-ə daxil olmusunuz!
 # LOCALIZATION NOTE (relinkDenied.openPrefs): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
+relinkDenied.openPrefs = NİZML
 
+relinkVerify.title = Sync-ə daxil olmaq istədiyinizdən əminsiniz?
 # LOCALIZATION NOTE (relinkVerify.message): Email address of a user previously signed in to Sync.
+relinkVerify.continue = Davam et
+relinkVerify.cancel = Ləğv et
