[dsb] update from Pootle (firefox)

--- a/dsb/services/sync/sync.properties
+++ b/dsb/services/sync/sync.properties
@@ -10,6 +10,7 @@ lastSync2.label = Slědna synchronizacija: %S
 
 # signInToSync.description is the tooltip for the Sync buttons when Sync is
 # not configured.
+signInToSync.description = Pla Sync pśizjawiś
 
 mobile.label = Mobilne cytańske znamjenja
 
