--- a/dsb/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/dsb/toolkit/chrome/global/devtools/gclicommands.properties
@@ -99,10 +99,12 @@ screenshotDelayManual=Cas, kótaryž se caka (w sekundach), nježli až se wobra
 # LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
 # the 'dpi' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
+screenshotDPIDesc=Dypki na col
 
 # LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
 # 'dpi' parameter to the 'screenshot' command, displayed when the user
 # asks for help on what it does.
+screenshotDPIManual=Licba dypkow na col w fośe wobrazowki
 
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
@@ -1582,6 +1584,7 @@ folderInvalidPath=Pšosym zapódajśo płaśiwu sćažku
 folderOpenDirResult=%1$S wócynjony
 
 # LOCALIZATION NOTE (security)
+securityPrivacyDesc=Pódpěrane funkcije wěstoty a priwatnosći pokazaś
 securityManual=Pśikaze za listowanje a wótwołowanje naraźenjow wó wěstotnych funkcijach za aktualnu domenu.
 securityListDesc=Wěstotne funkcije zwobrazniś
 securityListManual=Lisćinu wšych relewantnych wěstotnych funkcijow aktualnego boka zwobrazniś.
@@ -1595,7 +1598,12 @@ securityCSPNoCSPOnPage=Content-Security-Policy njedajo se namakaś za
 securityCSPHeaderOnPage=Content-Security-Policy za
 securityCSPROHeaderOnPage=Głowowa smužka Content-Security-Policy-Only za
 # Referrer Policy specific
+securityReferrerPolicyDesc=Aktualne pšawidła referrer pokazaś
+securityReferrerPolicyManual=Pšawidła referrer za aktualny bok z pśikładowymi referrerami za rozdźělne URI pokazaś.
+securityReferrerNextURI=Pśi woglědowanju
+securityReferrerCalculatedReferrer=Referrer buźo
 # LOCALIZATION NOTE: %1$S is the current page URI
+securityReferrerPolicyReportHeader=Pšawidła referrer za %1$S
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
