[dsb] update from Pootle (firefox)

--- a/dsb/dom/chrome/security/security.properties
+++ b/dsb/dom/chrome/security/security.properties
@@ -41,6 +41,7 @@ PKPMultipleReportURIs=Public-Key-Pins: Sedło jo głowowu smužku pódało, kót
 PKPPinsetDoesNotMatch=Public-Key-Pins: Sedło jo głowowu smužku pódało, kótaraž njejo wótpowědny pin wopśimjeła.
 PKPNoBackupPin=Public-Key-Pins: Sedło jo głowowu smužku pódało, kótaraž njejo zawěsćeński pin wopśimjeła.
 PKPCouldNotSaveState=Public-Key-Pins: Zmólka jo pśi registrěrowanju sedła ako host Public-Key-Pins nastała.
+PKPRootNotBuiltIn=Public-Key-Pins: Certifikat, kótaryž wužywa se pśez sedło, njejo se pśez certifikat w standardnem korjenjowem certifikatowem wobchoźe wudał. Aby se mimowólne złamanje zajźował, jo se pódana głowa ignorěrowała.
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=Toś to sedło wužywa SHA-1-certifikat; pśiraźijo se, až wužywaśo certifikaty ze signaturowymi algoritmami, kótarež wužywaju haš-funkcije, kótarež su mócnjejše ako SHA-1.
@@ -55,12 +56,19 @@ BothAllowScriptsAndSameOriginPresent=Iframe, kótaryž ma ako allow-scripts tak 
 
 # Sub-Resource Integrity
 # LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+MalformedIntegrityHash=Skriptowy element ma deforměrowanu pśeglědowańsku cyfru w swójom integritowem atribuśe: "%1$S". Korektny format jo "<hash algorithm>-<hash value>".
 # LOCALIZATION NOTE: Do not translate "integrity"
+InvalidIntegrityLength=Pśeglědowańska cyfra, kótaraž jo w integritowem atribuśe wopśimjona, ma wopacnu dłujkosć.
 # LOCALIZATION NOTE: Do not translate "integrity"
+InvalidIntegrityBase64=Pśeglědoańska cyfra, kótaraž jo w integritowem atribuśe wopśimjona, njedajo se dekoděrowaś.
 # LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+IntegrityMismatch=Žedna z pśeglědowańskich cyfrow typa "%1$S" w integritowem atribuśe njewótpowědujo wopśimjeśeju pódresurse.
 # LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+IneligibleResource="%1$S" njejo za integritowe kontrole, dokulaž njejo daniž CORS za njen zmóžnjony daniž wót togo samskego póchada.
 # LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+UnsupportedHashAlg=Njepódpěrany algoritmus za pśeglědowańske cyfry w integritowem atribuśe: "%1$S"
 # LOCALIZATION NOTE: Do not translate "integrity"
+NoValidMetadata=Integritowy atribut njewopśimujo płaśiwe metadaty.
 
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=Toś to sedło wužywa šyfru RC4 za skoděrowanje, kótaraž jo zestarjona a njewěsta.
