--- a/dsb/dom/chrome/xslt/xslt.properties
+++ b/dsb/dom/chrome/xslt/xslt.properties
@@ -33,6 +33,7 @@
 29 = Felujuca wuzgibnjona spinka.
 30 = Element z njepłaśiwym QName se twóri.
 31 = Wariablowe wězanje wobsenja wariablowe wězanje w tej samskej pśedłoze.
+32 = Wołanje ku klucowej funkciji njejo dowólone.
 
 LoadingError = Zmólka pśi cytanju stiloweje pśedłogi: %S
 TransformError = Zmólka za XSLT-transformaciju: %S
