--- a/dsb/dom/chrome/dom/dom.properties
+++ b/dsb/dom/chrome/dom/dom.properties
@@ -156,6 +156,7 @@ XMLDocumentLoadPrincipalMismatch=Wužywanje document.load jo na dokumentach zaka
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=IndexedDB-transakcija, kótaraž hišće njejo se zakócyła, jo se nawigacije boka dla pśetergnuła.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S are numbers.
+IgnoringWillChangeOverBudgetWarning=Pśetrjeba składowaka Will-change jo pśewusoka. Limit jo pówjerch dokumenta multiplicěrowany z %1$S (%2$S pikselow). Wšykne wustupowanja will-change ignorěrujo se w dokumenśe, jolic su nad limitom.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=ServiceWorker njedajo se ned startowaś, dokulaž druge dokumenty togo samskego samsneho póchada wužywaju južo maksimalnu licbu workerow. ServiceWorker jo něnto w cakańskem rěźe a buźo se startowaś, za tym až druge workery su se skóńcyli.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
@@ -175,4 +176,6 @@ InterceptedUsedResponse=ServiceWorker jo wužyte wótegrono do FetchEvent.respon
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
 ClientRequestOpaqueInterception=ServiceWorker jo opakne wótegrono na FetchEvent.respondWith() pśepódał, mjaztym až FetchEvent.request jo klientowe napšašowanje był. Klientowe napšašowanje jo generelnje wobglědowakowa nawigacija abo workerowy skript na nejwušej rowninje.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
+BadOpaqueRedirectInterception=ServiceWorker jo opaqueredirect response do FetchEvent.respondWith() pśepódał, mjaztym až FetchEvent.request njejo nawigaciske napšašowanje.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
+InterceptionCanceled=ServiceWorker jo wótpopadnjenje seśi pśez wołanje FetchEvent.preventDefault() pśetergnuł.
