[hsb] update from Pootle (firefox)

--- a/hsb/dom/chrome/security/security.properties
+++ b/hsb/dom/chrome/security/security.properties
@@ -41,7 +41,7 @@ PKPMultipleReportURIs=Public-Key-Pins: Sydło je hłowowu linku podało, kotraž
 PKPPinsetDoesNotMatch=Public-Key-Pins: Sydło je hłowowu linku podało, kotraž njeje wotpowědny pin wobsahowała.
 PKPNoBackupPin=Public-Key-Pins: Sydło je hłowowu linku podało, kotraž njeje zawěsćenski pin wobsahowała.
 PKPCouldNotSaveState=Public-Key-Pins: Zmylk je při registrowanju sydła jako host Public-Key-Pins wustupił.
-PKPRootNotBuiltIn=Public-Key-Pins: Certifikat, kotryž so přez sydło wužiwa, njeje so přez certifikat w standardnym kornjenjowym certifikatowym wobchodźe. Zo byšće njewotpohladanemu łamanju zadźěwał, je so podata hłowa ignorowała.
+PKPRootNotBuiltIn=Public-Key-Pins: Certifikat, kotryž so přez sydło wužiwa, njeje so přez certifikat w standardnym korjenjowym certifikatowym wobchodźe wudał. Zo by so njewotpohladane łamanje zadźěwał, je so podata hłowa ignorowała.
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=tute sydło wužiwa SHA-1-certifikat; poruča so, zo certifikaty ze signaturowymi algoritmami wužiwaće, kotrež haš-funkcije wužiwaja, kotrež su mócniše hač SHA-1.
