--- a/hsb/dom/chrome/dom/dom.properties
+++ b/hsb/dom/chrome/dom/dom.properties
@@ -176,6 +176,6 @@ InterceptedUsedResponse=ServiceWorker je wužitu wotmołwu do FetchEvent.respond
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
 ClientRequestOpaqueInterception=ServiceWorker je opaknu wotmołwu na FetchEvent.respondWith() přepodał, mjeztym zo FetchEvent.request běše klientowe naprašowanje. Klientowe naprašowanje je generelnje wobhladowakowa nawigacija abo workerowy skript na najwyšej runinje.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
-BadOpaqueRedirectInterception=ServiceWorker přepoda opaqueredirect responsce do FetchEvent.respondWith(), mjeztym FetchEvent.request nawigaciske naprašowanje njeje.
+BadOpaqueRedirectInterception=ServiceWorker přepoda opaqueredirect response do FetchEvent.respondWith(), mjeztym zo FetchEvent.request nawigaciske naprašowanje njeje.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
 InterceptionCanceled=ServiceWorker je wotpopadnjenje syće přez wołanje FetchEvent.preventDefault() přetorhnył.
