[dsb] update from Pootle (firefox)

--- a/dsb/browser/chrome/browser/accounts.properties
+++ b/dsb/browser/chrome/browser/accounts.properties
@@ -28,6 +28,7 @@ resendVerificationEmail.accessKey = Z
 reconnectDescription = Z %S znowego zwězaś
 
 # LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+verifyDescription = %S wobkšuśiś
 
 forgetMigration.label = Zabyś
 forgetMigration.accessKey = b
@@ -46,7 +47,9 @@ verificationSentTitle = Pśeglědanje wótpósłane
 verificationSentHeading = Pśeglědowański wótkaz jo se na %S pósłał
 verificationSentDescription = Pšosym skontrolěrujśo swóju e-mail a klikniśo na wótkaz, aby ze synchronizěrowanim zachopił.
 # LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
+verificationSentFull = Wobkšuśeński wótkaz jo se na %S pósłał. Pšosym pśeglědujśo swóju e-mailowu adresu a klikniśo na wótkaz, aby zachopiłsynchronizować.
 
 verificationNotSentTitle = Wobkšuśenje njedajo se pósłaś
 verificationNotSentHeading = Njamóžomy tuchylu žednu wobkšuśeńsku mejlku pósłaś
 verificationNotSentDescription = Pšosym wopytajśo pózdźej hyšći raz.
+verificationNotSentFull = Njamóžomy tuchylu wobkšuśeńsku mejlku słaś, pšosym wopytajśo pózdźej hyšći raz.
