--- a/dsb/browser/chrome/browser/loop/loop.properties
+++ b/dsb/browser/chrome/browser/loop/loop.properties
@@ -28,8 +28,18 @@ sign_in_again_use_as_guest_button2={{clientSuperShortname}} ako gósć wužywaś
 first_time_experience_button_label=Prědne kšace
 ## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
 ## user to create his or her first conversation.
+first_time_experience_subheading=Rozgronoju se pśizamknuś
 
 invite_header_text=Pśepšosćo někogo, se wam pśizamknuś.
+invite_header_text2=Pśepšosćo pśijaśela, aby se wam pśizamknuł
+invite_facebook_button=na Facebooku źěliś
+invite_facebook_triggered=źělony!
+invite_contacts_button=z kontaktami źěliś
+invite_contacts_triggered=źělony!
+invite_copy_button=wótkaz kopěrowaś
+invite_copy_triggered=kopěrowany!
+invite_email_button=wótkaz e-mailowaś
+invite_email_triggered=e-mailowany!
 
 # Status text
 display_name_guest=Gósć
@@ -89,9 +99,12 @@ contacts_search_placesholder2=Pytaś…
 
 ## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
+new_contact_button2=Nowy kontakt pśidaś
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
+contact_form_name_placeholder=Mě
+contact_form_email_placeholder=E-mail
 contact_form_fxos_phone_placeholder=Telefon Firefox OS
 contact_form_phone_placeholder2=Telefon
 
@@ -100,8 +113,10 @@ contacts_blocked_contacts=Blokěrowane kontakty
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
+add_contact_button=Kontakt pśidaś
 ## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
 ## panel. It is displayed when Add Contact is selected.
+add_contact_title=Kontakt pśidaś
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -127,14 +142,19 @@ import_contacts_success_message={{total}} kontakt jo se wuspěšnje importěrowa
 sync_contacts_button=Kontakty synchronizěrowaś
 ## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading2=Hyšći žedne kontakty.
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add2=Pśidajśo někogo!
 ## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
 ## has no conversations available.
+no_conversations_message_heading2=Hyšći žedne rozgrona.
 ## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
 ## user to start a new conversation.
+no_conversations_start_message2=Zachopśo nowe!
 ## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
 ## search returned no matching results.
+contacts_no_search_results=Žedne wótpowědujuce wuslědki.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -181,6 +201,7 @@ edit_contact_email_label=E-mail
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
+edit_contact_done_button=Dokóńcony
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -194,6 +215,8 @@ video_call_menu_button=Wideorozgrono
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Móžośo wašym kontaktam awtomatiski profilowe symbole pśidaś, z tym až źěliśo jich e-mailowe adrese z Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Dalšne informacije
+gravatars_promo_button_nothanks2=Ně, źěkujom se
+gravatars_promo_button_use2=Profilowe symbole wužywaś
 
 # Conversation Window Strings
 
@@ -209,6 +232,8 @@ hangup_button_title=Połožyś
 hangup_button_caption2=Skóńcyś
 mute_local_audio_button_title=Waš zuk wušaltowaś
 unmute_local_audio_button_title=Waš zuk zašaltowaś
+mute_local_video_button_title2=Wideo znjemóžniś
+unmute_local_video_button_title2=Wideo zmóžniś
 active_screenshare_button_title=Wěcej njeźěliś
 inactive_screenshare_button_title=Wašu wobrazowku źěliś
 share_tabs_button_title2=Waše rejtarki źěliś
@@ -246,6 +271,7 @@ restart_call=Zasej so pśizamknuś
 contact_unavailable_title={{contactName}} njejo k dispoziciji.
 generic_contact_unavailable_title=Toś ta wósoba njejo k dispoziciji.
 
+generic_failure_message=Mamy techniske śěžkosći…
 generic_failure_with_reason2=Móžośo hyšći raz wopytaś abo wótkaz e-mailowaś, gdy sćo pózdźej k dostaśeju.
 generic_failure_no_reason2=Cośo hyšći raz wopytaś?
 
@@ -261,6 +287,7 @@ call_timeout_notification_text=Waš telefonat njejo se pśedostał.
 retry_call_button=Hyšći raz wopytaś
 email_link_button=Wótkaz e-mailowaś
 cancel_button=Pśetergnuś
+rejoin_button=Rozgronoju se zasej pśizamknuś
 
 cannot_start_call_session_not_ready=Telefonat njedajo se zachopiś, pósejźenje njejo gótowo.
 network_disconnected=Seśowy zwisk jo se abruptnje skóńcył.
@@ -300,6 +327,7 @@ rooms_leave_button_label=Spušćiś
 rooms_list_copy_url_tooltip=Wótkaz kopěrowaś
 ## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
 ## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
+rooms_list_recent_conversations=NEJNOWŠE ROZGRONA
 rooms_list_delete_tooltip=Rozgrono lašowaś
 rooms_list_deleteConfirmation_label=Sćo wěsty?
 rooms_change_failed_label=Rozgrono njedajo se aktualizěrowaś
@@ -309,6 +337,7 @@ rooms_room_full_label=Stej južo dwa partnarja w toś tom rozgronje.
 rooms_room_full_call_to_action_nonFx_label=Ześěgniśo {{brandShortname}}, aby swójske zachopił
 rooms_room_full_call_to_action_label=Dalšne informacije wó {{clientShortname}} »
 rooms_room_joined_label=Něchten jo se rozgronoju pśizamknuł!
+rooms_room_join_label=Rozgronoju se pśizamknuś
 rooms_signout_alert=Wócynjone rozgrona se zacyniju
 
 # Infobar strings
@@ -324,11 +353,13 @@ infobar_menuitem_dontshowagain_accesskey=W
 # LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
 # conversation window when the user edits context. It is a header to the edit
 # section.
+context_inroom_header=Rozgranjajmy se wó…
 # LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
 # title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label2=Rozgranjajmy se wó:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -337,6 +368,8 @@ context_edit_name_placeholder=Mě rozgrona
 context_edit_comments_placeholder=Komentary
 context_add_some_label=Pśidajśo pitśku konteksta
 context_show_tooltip=Kontekst pokazaś
+context_cancel_label=Pśetergnuś
+context_done_label=Dokóńcony
 context_link_modified=Toś ten wótkaz jo se změnił.
 context_learn_more_link_label=Dalšne informacije.
 conversation_settings_menu_edit_context=Kontakt wobźěłaś
