[dsb] update from Pootle (firefox)

--- a/dsb/browser/chrome/browser/devtools/app-manager.properties
+++ b/dsb/browser/chrome/browser/devtools/app-manager.properties
@@ -18,6 +18,7 @@ project.installing=Instalěrujo se…
 project.installed=Zainstalěrowany!
 validator.nonExistingFolder=Projektowy zarědnik njeeksistěrujo
 validator.expectProjectFolder=Projektowy zarědnik jo dataja
+validator.noManifestFile=Manifestowa dataja jo trěbna w kórjenjowem zarědniku projekta, z mjenim 'manifest.webapp ' za zapakowane nałoženja abo 'manifest.json' za dodanki.
 validator.invalidManifestURL=Njepłaśiwy manifestowy URL '%S'
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
