[son] update from Pootle (firefox)

--- a/son/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/son/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,6 +99,7 @@ loop-call-button3.label = Foofo
 loop-call-button3.tooltiptext = Faakaaray šintin
 # LOCALIZATION NOTE(loop-call-button3-pb.tooltiptext): Shown when the button is
 # placed inside a Private Browsing window. %S is the value of loop-call-button3.label.
+loop-call-button3-pb.tooltiptext = %S ši duwandi sutura ceeciyan ra
 
 social-share-button.label = Moɲoo woo žemna
 social-share-button.tooltiptext = Moɲoo woo žemna
