--- a/son/browser/chrome/browser/loop/loop.properties
+++ b/son/browser/chrome/browser/loop/loop.properties
@@ -18,14 +18,28 @@ contacts_tab_button=Borey
 ## and this is displayed in slightly larger font. Please arrange as necessary for
 ## your locale.
 ## {{clientShortname2}} will be replaced by the brand name for either string.
+sign_in_again_title_line_one=Huru taaga taare
+sign_in_again_title_line_two2=ka gaabu ka goy nda {{clientShortname2}}
+sign_in_again_button=Huru
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
+sign_in_again_use_as_guest_button2=Goy nda {{clientSuperShortname}} sanda yaw
 
 first_time_experience_button_label=Wa šintin
 ## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
 ## user to create his or her first conversation.
+first_time_experience_subheading=Huru faakaaraa ra
 
 invite_header_text=Boro foo kanbe ni bande.
+invite_header_text2=Cere cee ka huru batoo ra
+invite_facebook_button=Žemna Facebook ga
+invite_facebook_triggered=a žemnandi!
+invite_contacts_button=žemna borey game
+invite_contacts_triggered=a žemnandi!
+invite_copy_button=dobu berandi
+invite_copy_triggered=a berandi!
+invite_email_button=bataga dobu
+invite_email_triggered=a sanbandi!
 
 # Status text
 display_name_guest=Yaw
@@ -50,15 +64,22 @@ problem_accessing_account=Šenday foo bangay war kontu huruyanoo waate
 ## the appropriate action.
 retry_button=Šii taaga
 
+share_email_subject6=Ay gar widewo faakaaray se
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Firefox Hello doboo naagu ka huru faakaaraa ra sohõda: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Ay gar widewo faakaaray se. Firefox Hello doboo naagu ka ciya sohõda: {{callUrl}}\n\nIr ma woo deedaa tee faakaaraa waate: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=\n\n________\nAy gar ka nda faakaaray widewo Firefox Hello ra forba. Boro kul cee nd widewo, nungu kul ra. Zumandiyan wala maahantumyan kul ši a ra. Bay ka tonton http://www.firefox.com/hello ga
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
+share_tweet=Ay gar widewo faakaaray {{clientShortname2}} ga!
 
+share_button3=Doboo žemna
+share_add_service_button=Goymee tonton
 copy_url_button2=Doboo berandi
 copied_url_button=Berante!
 
@@ -67,6 +88,7 @@ panel_footer_signin_or_signup_link=Huru wala maa hantum
 settings_menu_item_account=Kontu
 settings_menu_item_settings=Kayandiyaney
 settings_menu_item_signout=Fatta
+settings_menu_item_signin=Huru
 settings_menu_button_tooltip=Kayandiyaney
 
 # Contact Strings (Panel)
@@ -77,9 +99,12 @@ contacts_search_placesholder2=Ceeci…
 
 ## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
+new_contact_button2=Boro taaga tonton
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
+contact_form_name_placeholder=Maa
+contact_form_email_placeholder=Bataga
 contact_form_fxos_phone_placeholder=Firefox OS talfon
 contact_form_phone_placeholder2=Talfon
 
@@ -88,8 +113,10 @@ contacts_blocked_contacts=Boro hodantey
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
+add_contact_button=Boro tonton
 ## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
 ## panel. It is displayed when Add Contact is selected.
+add_contact_title=Boro tonton
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -98,6 +125,7 @@ valid_email_text_description=Bataga aderesu henna foo dam ne
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the
 ## panel.
 add_or_import_contact_title=Boro dam wal'a bere
+import_contacts_button2=Zaa Google ga
 ## LOCALIZATION NOTE (import_contacts_button3): Text for button used to import
 ## contacts into the contact list.
 import_contacts_button3=Bere
@@ -114,14 +142,19 @@ import_contacts_success_message=Boro {{total}} zaandi ka timme;Boro {{total}} za
 sync_contacts_button=Borey hangandi
 ## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading2=Boro kul šii sohõda.
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add2=Boro tonton!
 ## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
 ## has no conversations available.
+no_conversations_message_heading2=Faakaaray kul šii sohõda.
 ## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
 ## user to start a new conversation.
+no_conversations_start_message2=Itaaga foo šintin!
 ## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
 ## search returned no matching results.
+contacts_no_search_results=Hunyan himante kul šii.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -131,8 +164,10 @@ import_failed_support_button=Faaba
 
 ## LOCALIZATION NOTE(remove_contact_menu_button2): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button2=Boraa kaa…
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Boraa kaa
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Alhakiika war ga baa ka boraa woo kaa?
@@ -141,6 +176,7 @@ confirm_delete_contact_alert=Alhakiika war ga baa ka boraa woo kaa?
 confirm_delete_contact_cancel_button=Naŋ
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=AY BOREY
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -164,6 +200,7 @@ edit_contact_email_label=Bataga
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
+edit_contact_done_button=A ben
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -177,6 +214,8 @@ video_call_menu_button=Widewo faakaaray
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=War ga hin ka too alhaali biiyaŋ ma tonton ngi boŋše war borey ga nda ngi bataga aderesey žemna nda Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Bay ka tonton
+gravatars_promo_button_nothanks2=Kalaa, ay ši baa
+gravatars_promo_button_use2=Goy nda alhaali biyey
 
 # Conversation Window Strings
 
@@ -192,9 +231,13 @@ hangup_button_title=Talfon wii
 hangup_button_caption2=Fatta
 mute_local_audio_button_title=War jinaa jindoo wii
 unmute_local_audio_button_title=War jinaa jindoo willi
+mute_local_video_button_title2=Widewo kayandi
+unmute_local_video_button_title2=Widewo tunandi
 active_screenshare_button_title=Fenda žemnayan
 inactive_screenshare_button_title=War dijoo žemna
+share_tabs_button_title2=War nor lokey žemna
 share_windows_button_title=Zanfun taney žemna
+self_view_hidden_message=Boŋ-gunayan ga tugu amm'a goo ma sanbandi; zanfunoo sasawandi ka dii y'a
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -227,6 +270,7 @@ restart_call=Willi batoo ra
 contact_unavailable_title={{contactName}} ši duwandi.
 generic_contact_unavailable_title=Boraa woo ši duwandi.
 
+generic_failure_message=Ir goyjinaa ga šendayyaŋ maate…
 generic_failure_with_reason2=War ga hin ka ciya koyne wala dobu sanba bataga ra kaŋ war ga hin ka duwandi.
 generic_failure_no_reason2=War ga boona ka ciya koyne?
 
@@ -240,11 +284,14 @@ call_timeout_notification_text=War ciyaroo mana bisa.
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed.
 retry_call_button=Ciya taaga
+email_link_button=Doboo sanba
 cancel_button=Naŋ
+rejoin_button=Willi faakaaraa ra
 
 cannot_start_call_session_not_ready=Ši hin ka šintin ka ciya za batoo mana soolu.
 network_disconnected=Sankay ciyaroo tun de a dunbu.
 connection_error_see_console_notification=Ciyaroo dunbu; šilbayhayey guna diji-walhaa ga.
+no_media_failure_message=Mana dii biizaahaya wala mikro kul
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
@@ -267,6 +314,7 @@ feedback_rejoin_button=Willi
 ## an abusive user.
 feedback_report_user_button=Goykaw bayrandiyan
 feedback_window_heading=Taka foo nda war faakaaraa?
+feedback_request_button=War laasaaboo naŋ
 
 help_label=Faaba
 tour_label=Windi
@@ -278,14 +326,17 @@ rooms_leave_button_label=Koy
 rooms_list_copy_url_tooltip=Doboo berandi
 ## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
 ## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
+rooms_list_recent_conversations=FAAKAARAY KORAWEY
 rooms_list_delete_tooltip=Faakaaraa tuusu
 rooms_list_deleteConfirmation_label=War g''alhakiika?
+rooms_change_failed_label=Faakaaraa ši hin ka taagandi
 rooms_new_room_button_label=Faakaaray šintin
 rooms_panel_title=Faakaaray foo suuba wal'itaaga foo šintin
 rooms_room_full_label=Boro hinka ka bara faakaaraa woo ra ka ben.
 rooms_room_full_call_to_action_nonFx_label={{brandShortname}} zumandi ka war wanoo šintin
 rooms_room_full_call_to_action_label=Caw ka tonton {{clientShortname}} » ga
 rooms_room_joined_label=Boro kaa war do faakaaraa ra!
+rooms_room_join_label=Huru faakaaraa ra
 rooms_signout_alert=Faakaaray feerantey ga kaa ka daaba
 
 # Infobar strings
@@ -301,15 +352,29 @@ infobar_menuitem_dontshowagain_accesskey=D
 # LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
 # conversation window when the user edits context. It is a header to the edit
 # section.
+context_inroom_header=Ir ma nga šennoo tee…
 # LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
 # title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label2=Ir ma nga šennoo tee:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
+context_edit_activate_label=Šelaŋ "{{title}}" ga
+context_edit_name_placeholder=Faakaaraa maaɲoo
+context_edit_comments_placeholder=Daarawey
+context_add_some_label=Fahami kayna tonton
+context_show_tooltip=Fahamoo cebe
+context_cancel_label=Naŋ
+context_done_label=A ben
+context_link_modified=Doboo n' ka barmay.
+context_learn_more_link_label=Bay ka tonton.
+conversation_settings_menu_edit_context=Fahami doo barmay
+conversation_settings_menu_hide_context=Fahami doo hugu
 
 
 # Text chat strings
 
+chat_textbox_placeholder=Hantum ne…
