--- a/son/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/son/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -25,6 +25,8 @@ dateUpdated=Na %S taagandi
 notification.incompatible=%1$S nda %2$S %3$S ši cere kanbe.
 #LOCALIZATION NOTE (notification.unsigned, notification.unsignedAndDisabled) %1$S is the add-on name, %2$S is brand name
 notification.unsignedAndDisabled=%1$S mana hin ka korosandi ka goy nda %2$S nda an' ka kayandi.
+notification.unsigned=%1$S mana hin ka korosandi ka goy nda %2$S. War ma hawgay.
+notification.unsigned.link=Alhabar tontoni
 #LOCALIZATION NOTE (notification.blocked) %1$S is the add-on name
 notification.blocked=%1$S kayandi saajaw wala tabatiyan-jaŋay sabbu še.
 notification.blocked.link=Alhabar tontoni
@@ -77,6 +79,9 @@ installCancelled=Sinjiyan naŋante
 #LOCALIZATION NOTE (details.notification.incompatible) %1$S is the add-on name, %2$S is brand name, %3$S is application version
 details.notification.incompatible=%1$S nda %2$S %3$S ši cere kanbe.
 #LOCALIZATION NOTE (details.notification.unsigned, details.notification.unsignedAndDisabled) %1$S is the add-on name, %2$S is brand name
+details.notification.unsignedAndDisabled=%1$S mana hin ka korosandi ka goy nda %2$S nda an' ka kayandi.
+details.notification.unsigned=%1$S mana hin ka korosandi ka goy nda %2$S. War ma hawgay.
+details.notification.unsigned.link=Alhabar tontoni
 #LOCALIZATION NOTE (details.notification.blocked) %1$S is the add-on name
 details.notification.blocked=%1$S kay saajaw wala tabatiyan-jaŋay sabbu še.
 details.notification.blocked.link=Alhabar tontoni
