[son] update from Pootle (firefox)

--- a/son/browser/chrome/browser/sitePermissions.properties
+++ b/son/browser/chrome/browser/sitePermissions.properties
@@ -17,3 +17,4 @@ permission.popup.label = Ceberi bata zanfuney feeri
 permission.geo.label = Too war gorodogoo do
 permission.indexedDB.label = Bila nda ciyari jišidoo gaabu
 permission.pointerLock.label = Ncaŋ cebekaa tugu
+permission.push.label = Duu bangandiyan moorey
