--- a/son/toolkit/chrome/global/aboutReader.properties
+++ b/son/toolkit/chrome/global/aboutReader.properties
@@ -31,4 +31,6 @@ aboutReader.footer.deleteThisArticle=Hantumoo woo tuusu
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=Cawkaw gunari dam
+readerView.enter.accesskey=R
 readerView.close=Cawkaw gunari daabu
+readerView.close.accesskey=R
