--- a/son/toolkit/chrome/global/aboutWebrtc.properties
+++ b/son/toolkit/chrome/global/aboutWebrtc.properties
@@ -5,15 +5,20 @@
 # LOCALIZATION NOTE (document_title, cannot_retrieve_log):
 # The text "WebRTC" is a proper noun and should not be translated.
 # It is the general label for the standards based technology. see http://www.webrtc.org
+document_title = Kunahere kunahere bayhayey
+cannot_retrieve_log = Ši hin ka WebRTC cebandu bayhayey soolom
 
 # LOCALIZATION NOTE (save_page_msg):
 # %1$S will be replaced by a full path file name: the target of the SavePage operation.
+save_page_msg = moo gaabundi ne: %1$S
 
 # LOCALIZATION NOTE (save_page_dialog_title): "about:webrtc" is a internal browser URL and should not be
 # translated. This string is used as a title for a file save dialog box.
+save_page_dialog_title = about:webrtc gaabu sanda
 
 # LOCALIZATION NOTE (debug_mode_off_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
+debug_mode_off_state_msg = ceebandu tammaasa ga duwandi ne: %1$S
 
 # LOCALIZATION NOTE (debug_mode_on_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
