[son] update from Pootle (firefox)

--- a/son/toolkit/chrome/global/aboutWebrtc.properties
+++ b/son/toolkit/chrome/global/aboutWebrtc.properties
@@ -100,6 +100,20 @@ log_heading = Ciyari zaaritiira
 log_show_msg = zaaritiira cebe
 log_hide_msg = zaaritiira tugu
 connection_closed = daabante
+local_candidate = Gorodoo kandiida
+remote_candidate = Kandiida moora
+priority = Cahãrihaya
+fold_show_msg = šilbayhayey cebe
+fold_show_hint = naagu ka dunboo woo hayandi
+fold_hide_msg = šilbayhayey tugu
+fold_hide_hint = naagu ka dunboo woo nakasandi
+dropped_frames_label = Kunga derantey
+discarded_packets_label = Margari murantey
+decoder_label = Feerandikaw
+encoder_label = Harfu-hawkaw
 received_label = Duwante\u0020
+packets = margarey
+lost_label = Derante
+jitter_label = Jijiri
 sent_label = Sanbante
 
