[hsb] update from Pootle (thunderbird)

--- a/hsb/editor/ui/chrome/composer/editor.properties
+++ b/hsb/editor/ui/chrome/composer/editor.properties
@@ -89,6 +89,7 @@ LinkImage=Wobraz teksta
 MixedSelection=[Měšany wuběr]
 Mixed=(měšany)
 # LOCALIZATION NOTE (NotInstalled): %S is the name of the font
+NotInstalled=%S (njeinstalowany)
 EnterLinkText=Zapodajće tekst za zwobraznjenje wotkaza:
 EnterLinkTextAccessKey=Z
 EmptyLinkTextError=Dyrbiće tekst za tutón wotkaz podać.
